@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  kernel_args -> bootloader_kernel_args
+
   26 Mar 2005; Preston Cody <codeman@gentoo.org>
   ow my colon is missing.
   fixed prompts in partitioning
